--- a/news/src/main/resources/templates/pages/dashboard.html
+++ b/news/src/main/resources/templates/pages/dashboard.html
@@ -159,7 +159,7 @@
                         <a href="https://www.igis.co.kr/" target="_blank" class="partner-card"><img src="/img/igis.png" alt="아이지아이에스 로고" /></a>
                         <a href="http://www.sillasystem.com/main.php" target="_blank" class="partner-card"><img src="/img/sillasystem.png" alt="신라시스템 로고" /></a>
                         <a href="http://www.bumil.co.kr" target="_blank" class="partner-card"><img src="/img/bumil.png" alt="범일정보 로고" /></a>
-                        <a href="https://computermate.co.kr/kor" target="_blank" class="partner-card"><img src="/img/computermate.png" alt="컴퓨터메이트 로고" /></a>
+                        <a href="http://www.sejoongis.co.kr/" target="_blank" class="partner-card"><img src="/img/sejoongIS.png" alt="세종아이에스 로고" /></a>
                     </section>
                 </div>
 
